--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "scripts": {
-        "docs:dev": "vuepress dev docs",
-        "docs:build": "vuepress build docs"
-    },
-    "devDependencies": {
-        "vuepress": "^1.8.2"
-    }
+  "devDependencies": {
+    "docsify-cli": "^4.3.0"
+  },
+  "scripts": {
+    "doc": "docsify serve ./docs"
+  },
+  "dependencies": {}
 }
