--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "docsify-cli": "^4.3.0"
   },
   "scripts": {
-    "doc": "docsify serve ./docs"
+    "doc": "docsify serve ./"
   },
   "dependencies": {}
 }
